--- a/index.html
+++ b/index.html
@@ -3,38 +3,43 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>portfoliowebsite</title>
+    <title>Portfolio Website</title>
     <link rel="stylesheet" href="style.css" />
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+    <script src="https://unpkg.com/typed.js@2.0.15/dist/typed.umd.js"></script>
   </head>
   <body>
     <header class="header">
-        <a href="#" class="logo">Portfolio</a>
-
-   
-    <nav class="navbar">
-      <a href="#">Home</a>
-      <a href="#">Projects</a>
-      <a href="#">Skills</a>
-      <a href="#">About</a>
-      <a href="#">Contact</a>
-    </nav>
-</header>
+      <a href="#" class="logo">Portfolio</a>
+      <nav class="navbar">
+        <a href="#">Home</a>
+        <a href="#">Projects</a>
+        <a href="#">Skills</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
+      </nav>
+    </header>
     <section class="home">
-        <div class="home-content">
-            <h3>Hello,it's me </h3>
-            <h1>Ian Njoroge.</h1>
-            <h3> I am a</h3>
-             <p>Web developer and a data science enthusiast. I look foward to build more with the skills I have.</p>
-             <div class="home-sct">
-                <a href="#"><i class='bx bxl-linkedin' ></i></a>
-                <a href="#"><i class='bx bxl-twitter' ></i></a>
-                <a href="#"><i class='bx bxl-github' ></i></a>
-                <a href="#"><i class='bx bx-envelope' ></i></a>
-                
-             </div>
-             <a href="#" class="btn-box">More info</a>
+      <div class="home-content">
+        <h3>Hello, it's me</h3>
+        <h1>Ian Njoroge.</h1>
+        <h3>I am a <span class="text"></span></h3>
+        <p>
+          Web developer and a data science enthusiast. I look forward to
+          building more with the skills I have.
+        </p>
+        <div class="home-sct">
+          <a href="#"><i class="bx bxl-linkedin"></i></a>
+          <a href="#"><i class="bx bxl-twitter"></i></a>
+          <a href="#"><i class="bx bxl-github"></i></a>
+          <a href="#"><i class="bx bx-envelope"></i></a>
         </div>
-    </div>
+        <a href="#" class="btn-box">More info</a>
+      </div>
+    </section>
+    <script src="main.js"></script>
   </body>
 </html>
