--- a/index.html
+++ b/index.html
@@ -39,7 +39,22 @@
         </div>
         <a href="#" class="btn-box">More info</a>
       </div>
+    </div>
+  </div>
+  <span class="homeimage"></span>
     </section>
+    <section class="about" id="about">
+      <div class="about-img">
+        <img src="me.jpg">
+      </div>
+      <div class="about-text">
+        <h2>About<span>Me</span>  </h2>
+        <h4>Front End developer</h4>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores officia placeat, consectetur nemo exercitationem voluptates velit quae, mollitia totam animi ducimus a voluptas aperiam ut aliquam. Odio iure dignissimos molestias!
+        </p>
+        <a href="me.jpg" class="btn-box"> More About me</a>
+      </div>
+
     <script src="main.js"></script>
   </body>
 </html>
