--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <header class="header">
       <a href="#" class="logo">Portfolio</a>
       <nav class="navbar">
-        <a href="#">Home</a>
-        <a href="#">Projects</a>
-        <a href="#">Skills</a>
-        <a href="#">About</a>
-        <a href="#">Contact</a>
+        <a href="#" style="--i:1;"class="active">Home</a>
+        <a href="#"style="--i:2;">Projects</a>
+        <a href="#"style="--i:3;">Skills</a>
+        <a href="#"style="--i:4;">About</a>
+        <a href="#"style="--i:5;">Contact</a>
       </nav>
     </header>
     <section class="home">
@@ -32,28 +32,56 @@
           building more with the skills I have.
         </p>
         <div class="home-sct">
-          <a href="#"><i class="bx bxl-linkedin"></i></a>
-          <a href="#"><i class="bx bxl-twitter"></i></a>
-          <a href="#"><i class="bx bxl-github"></i></a>
-          <a href="#"><i class="bx bx-envelope"></i></a>
+          <a href="#"style="--i:7;"><i class="bx bxl-linkedin"></i></a>
+          <a href="#"style="--i:8;"><i class="bx bxl-twitter"></i></a>
+          <a href="#"style="--i:9;"><i class="bx bxl-github"></i></a>
+          <a href="#"style="--i:10;"><i class="bx bx-envelope"></i></a>
         </div>
         <a href="#" class="btn-box">More info</a>
       </div>
     </div>
   </div>
-  <span class="homeimage"></span>
+  <span class="home-imgHover"></span>
     </section>
     <section class="about" id="about">
-      <div class="about-img">
-        <img src="me.jpg">
-      </div>
+     <div class="abt-img">
+      <img src="dp2.jpg">
+     </div>
       <div class="about-text">
-        <h2>About<span>Me</span>  </h2>
+        <h2>About <span>Me</span>  </h2>
         <h4>Front End developer</h4>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores officia placeat, consectetur nemo exercitationem voluptates velit quae, mollitia totam animi ducimus a voluptas aperiam ut aliquam. Odio iure dignissimos molestias!
         </p>
-        <a href="me.jpg" class="btn-box"> More About me</a>
-      </div>
+        <a href="#" class="btn-box">More about me</a>
+      </section>
+        <section>
+          <div class="services" id="services">
+            <div class="container">
+            <h1 class="sub-title">My <span>Services</span></h1>
+            <div class="services-list">
+              <div>
+              <i class='bx bxs-data' style='color:blue'  ></i>
+              <h2>Data Science</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, itaque asperiores iure corrupti harum dolorem nemo corporis? Nulla voluptate repellat, aliquid nemo laudantium perspiciatis expedita! Architecto deleniti quia doloremque deserunt!</p>
+              <a href="#" class="read">Learn more</a>
+
+            </div>
+            <div>
+            <i class='bx bx-code' style="color: blue;"></i>
+            <h2>Front End development</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, itaque asperiores iure corrupti harum dolorem nemo corporis? Nulla voluptate repellat, aliquid nemo laudantium perspiciatis expedita! Architecto deleniti quia doloremque deserunt!</p>
+            <a href="#" class="read">Learn more</a>
+
+          </div>
+          <div>
+            <i class='bx bx-cog' style='color:blue'  ></i>
+          <h2>Machine Learning</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, itaque asperiores iure corrupti harum dolorem nemo corporis? Nulla voluptate repellat, aliquid nemo laudantium perspiciatis expedita! Architecto deleniti quia doloremque deserunt!</p>
+          <a href="#" class="read">Learn more</a>
+
+        </div>
+          </div>
+        </section>
 
     <script src="main.js"></script>
   </body>
