added  contact links and about content

--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
         <h1>Ian Njoroge.</h1>
         <h3>I am a <span class="text"></span></h3>
         <p>
-          Web developer and a data science enthusiast. I look forward to
-          building more with the skills I have.
+          who thrives on turning complex problems into simple, elegant solutions using the power of machine learning and data science. Explore my projects to see innovation in action.
         </p>
         <div class="home-sct">
-          <a href="#"style="--i:7;"><i class="bx bxl-linkedin"></i></a>
-          <a href="#"style="--i:8;"><i class="bx bxl-twitter"></i></a>
-          <a href="#"style="--i:9;"><i class="bx bxl-github"></i></a>
-          <a href="#"style="--i:10;"><i class="bx bx-envelope"></i></a>
+          <a href="https://www.linkedin.com/in/ian-njoroge-1b6317243?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"style="--i:7;"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://x.com/ianoh_ke8"style="--i:8;"><i class="bx bxl-twitter"></i></a>
+          <a href="https://github.com/823Njoroge"style="--i:9;"><i class="bx bxl-github"></i></a>
+          <a href="mailto:njorogeian823@gmail.com" style="--i:10;"><i class="bx bx-envelope"></i></a>
+
         </div>
         <a href="#" class="btn-box">More info</a>
       </div>
@@ -50,7 +50,7 @@
       <div class="about-text">
         <h2>About <span>Me</span>  </h2>
         <h4>Front End developer</h4>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores officia placeat, consectetur nemo exercitationem voluptates velit quae, mollitia totam animi ducimus a voluptas aperiam ut aliquam. Odio iure dignissimos molestias!
+        <p>I am a passionate front-end developer with a knack for creating visually stunning and highly functional websites. With expertise in HTML, CSS, JavaScript, and frameworks like React, I bring designs to life with seamless user experiences. My work blends creativity and technical skill to build responsive, user-friendly interfaces that engage and delight users. Explore my portfolio to see how I turn ideas into interactive digital experiences.
         </p>
         <a href="#" class="btn-box">More about me</a>
       </section>
@@ -80,6 +80,50 @@
           <a href="#" class="read">Learn more</a>
 
         </div>
+          </div>
+        </section>
+        <h1 class="sub-title">My <span>Skills</span></h1>
+
+        <section>
+          <div class="container1" id="skills">
+            <h1 class="heading1">Technical Skills</h1>
+            <div class="Technical-bars">
+              <div class="bar"><i class='bx bxl-html5'></i>
+                <div class="info">
+                  <span>HTML</span>
+
+                </div>
+                <div class="progress-line html">
+                  <span></span>
+                </div>
+              </div>
+              <div class="bar"><i class='bx bxl-css3' ></i>
+                <div class="info">
+                  <span>CSS</span>
+
+                </div>
+                <div class="progress-line css">
+                  <span></span>
+                </div>
+              </div>
+              <div class="bar"><i class='bx bxl-javascript'></i>
+                <div class="info">
+                  <span>Javascript</span>
+
+                </div>
+                <div class="progress-line Javascript">
+                  <span></span>
+                </div>
+              </div>
+              <div class="bar"><i class='bx bxl-python'></i>
+                <div class="info">
+                  <span>Python</span>
+
+                </div>
+                <div class="progress-line Python">
+                  <span></span>
+                </div>
+              </div>
           </div>
         </section>
 
