added js section

--- a/index.html
+++ b/index.html
@@ -61,25 +61,19 @@
             <div class="services-list">
               <div>
               <i class='bx bxs-data' style='color:blue'  ></i>
-              <h2>Data Science</h2>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, itaque asperiores iure corrupti harum dolorem nemo corporis? Nulla voluptate repellat, aliquid nemo laudantium perspiciatis expedita! Architecto deleniti quia doloremque deserunt!</p>
+              <h2>Data Science and Machine Learning</h2>
+              <p>As a skilled data scientist and machine learning expert, I provide comprehensive services that transform data into actionable insights and intelligent solutions. I specialize in developing robust predictive models, designing advanced algorithms, and leveraging big data to drive strategic decision-making. From data preprocessing and exploratory analysis to deploying scalable machine learning systems, I ensure precise and impactful results. Whether you need to optimize business processes, forecast trends, or harness the power of AI for innovative applications, my expertise will help you unlock the full potential of your data.</p>
               <a href="#" class="read">Learn more</a>
 
             </div>
             <div>
             <i class='bx bx-code' style="color: blue;"></i>
             <h2>Front End development</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, itaque asperiores iure corrupti harum dolorem nemo corporis? Nulla voluptate repellat, aliquid nemo laudantium perspiciatis expedita! Architecto deleniti quia doloremque deserunt!</p>
+            <p>As a dedicated front-end developer, I offer a comprehensive suite of services designed to elevate your digital presence. From crafting responsive and visually captivating websites to optimizing user interfaces for seamless interaction, I specialize in translating design concepts into dynamic, user-friendly web applications. My expertise extends to cutting-edge technologies like HTML5, CSS3, JavaScript, and React, ensuring your website is not only aesthetically pleasing but also highly functional and performant. Whether you need a complete website overhaul, custom web components, or interactive features, I am committed to delivering solutions that enhance user engagement and drive success for your business</p>
             <a href="#" class="read">Learn more</a>
 
           </div>
-          <div>
-            <i class='bx bx-cog' style='color:blue'  ></i>
-          <h2>Machine Learning</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, itaque asperiores iure corrupti harum dolorem nemo corporis? Nulla voluptate repellat, aliquid nemo laudantium perspiciatis expedita! Architecto deleniti quia doloremque deserunt!</p>
-          <a href="#" class="read">Learn more</a>
-
-        </div>
+          
           </div>
         </section>
         <h1 class="sub-title">My <span>Skills</span></h1>
