progress bar done

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <div class="container1" id="skills">
             <h1 class="heading1">Technical Skills</h1>
             <div class="Technical-bars">
-              <div class="bar"><i class='bx bxl-html5'></i>
+              <div class="bar"><i style="color: #c95d2e;"  class='bx bxl-html5'></i>
                 <div class="info">
                   <span>HTML</span>
 
@@ -91,7 +91,7 @@
                   <span></span>
                 </div>
               </div>
-              <div class="bar"><i class='bx bxl-css3' ></i>
+              <div class="bar"><i style="color: #147bbc;" class='bx bxl-css3' ></i>
                 <div class="info">
                   <span>CSS</span>
 
@@ -100,7 +100,7 @@
                   <span></span>
                 </div>
               </div>
-              <div class="bar"><i class='bx bxl-javascript'></i>
+              <div class="bar"><i style="color: #b0bc1e;" class='bx bxl-javascript'></i>
                 <div class="info">
                   <span>Javascript</span>
 
@@ -109,16 +109,49 @@
                   <span></span>
                 </div>
               </div>
-              <div class="bar"><i class='bx bxl-python'></i>
+              <div class="bar"><i style="color: #c32ec9;" class='bx bxl-python'></i>
                 <div class="info">
                   <span>Python</span>
 
                 </div>
-                <div class="progress-line Python">
+                <div class="progress-line python">
                   <span></span>
                 </div>
               </div>
           </div>
+
+          <div class="container1">
+            <h1 class="heading1">Professional Skills</h1>
+            <div class="radial-bars">
+              <svg x="0px" y="0px" viewBox="0 0 200 200">
+                <circle class="progress-bar" cx="100" cy="100" r="80"></circle>
+                <circle class="path path-1" cx="100" cy="100" r="80"></circle>
+              </svg>
+              <div class="percentage">75%</div>
+              <div class="text">Creativity</div>
+          </div>
+          <div class="radial-bars">
+            <svg x="0px" y="0px" viewBox="0 0 200 200">
+              <circle class="progress-bar" cx="100" cy="100" r="80"></circle>
+              <circle class="path path-1" cx="100" cy="100" r="80"></circle>
+            </svg>
+            <div class="percentage">80%</div>
+            <div class="text">Communication and writing</div>
+        </div><div class="radial-bars">
+          <svg x="0px" y="0px" viewBox="0 0 200 200">
+            <circle class="progress-bar" cx="100" cy="100" r="80"></circle>
+            <circle class="path path-1" cx="100" cy="100" r="80"></circle>
+          </svg>
+          <div class="percentage">85%</div>
+          <div class="text">Problem Solving</div>
+      </div><div class="radial-bars">
+        <svg x="0px" y="0px" viewBox="0 0 200 200">
+          <circle class="progress-bar" cx="100" cy="100" r="80"></circle>
+          <circle class="path path-1" cx="100" cy="100" r="80"></circle>
+        </svg>
+        <div class="percentage">75%</div>
+        <div class="text">Teamwork</div>
+    </div>
         </section>
 
     <script src="main.js"></script>
