--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <a href="SECTION.html" style="--i: 2">Projects</a>
         <a href="#" style="--i: 3">Skills</a>
         <a href="#" style="--i: 4">About</a>
-        <a href="#" style="--i: 5">Contact</a>
+        <a href="#" style="--i: 5">Contacts</a>
       </nav>
     </header>
 
